# EdMapPro

./: .replit  GETTING_STARTED.md  MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted--I-know-that-it-s-probably-an-edge-case-but-perhaps-we-can-refine-it-Here-s-the-latest-interview-co-1764410329978_1764410329979.txt  Pasted-10Error-while-parsing-the-sandbox-attribute-allow-downloads-without-user-activation-is-an-inval-1763929849801_1763929849801.txt  Pasted-About-the-job-ZeptoLab-is-looking-for-a-Project-Manager-to-join-our-team-on-the-awesome-game-Bullet--1751061549054_1751061549056.txt  Pasted-Error-while-parsing-the-sandbox-attribute-allow-downloads-without-user-activation-is-an-invalid-1763929780207_1763929780208.txt  Pasted-Good-morning-Samvel-it-s-great-to-have-you-here-today-and-thank-you-for-taking-the-time-to-speak--1764263632203_1764263632203.txt  Pasted-Great-To-get-us-started-I-ll-give-you-a-quick-overview-of-the-role-and-then-would-love-to-hear-mor-1764411941536_1764411941536.txt  Pasted-Here-s-a-Product-Requirement-Document-PRD-for-your-Customer-Support-Simulation-Product-foc-1751201348305_1751201348306.txt  Pasted-It-s-great-to-hear-that-you-re-feeling-welcome-by-the-team-we-definitely-try-to-make-sure-everyone-1764448432120_1764448432120.txt  Pasted-Product-Requirements-Document-PRD-Product-Name-edmap-Overview-edmap-is-a-B2B-onboarding-platfo-1751059759609_1751059759610.txt  prompt_1764324256885.docx  (+1 more)
backend/: .env.example  .gitignore  README.md  (+4 more)
(+505 files in other folders)
